fix(client/filter): harden CSSTokenizerFilter and remove dead code\n\n- Avoid ClassCastException by preferring ParsedURL over ParsedString in import uri extraction\n- Replace empty-body if with short-circuit in STATE1 semicolon handler\n- Make tryHandleCharset() void; remove unused return value\n- Return empty list instead of null from media parser; adjust @import guard\n- Remove always-true condition after guarded decrement of openBraces\n- Simplify helpers: remove constant offset param; fix chain parsing to use fixed 'b'\n\nNo behavior change intended beyond strictness and safety; all tests pass.